# FastAPI-

FastAPI/: main.py  pyproject.toml  temp.py  test.sh
FastAPI/app/models/: users.py
FastAPI/app/schemas/: users.py
FastAPI2/: .dmypy.json  .gitignore  conftest.py  pyproject.toml
FastAPI2/app/tests/: test_user_router.py
