[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["dodzn89-cell <dodzn89@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
httpx = "^0.28.1"
pytest = "^9.0.2"
coverage = "^7.13.1"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"
mypy = "1.13.0"
pytest-asyncio = "^1.3.0"
coverage = "^7.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
mypy_path = "."
explicit_package_bases = true
ignore_missing_imports = true